move button to right

--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -335,4 +335,4 @@
 
 {% endblock %}
 
-cd RiskAndFairness_oTree/ && git add templates/RiskAndFairness_oTree/Graph.html && git commit -m "___________" && git pus
+{#cd RiskAndFairness_oTree/ && git add templates/RiskAndFairness_oTree/Graph.html && git commit -m "___________" && git pus#}
