--- a/templates/RiskAndFairness_oTree/Graph.html
+++ b/templates/RiskAndFairness_oTree/Graph.html
@@ -322,7 +322,7 @@
     </div>
 
 
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
     $(document).ready(function() {
         $('.next-button').click(function() {
             if (somethingChanged === false) {
@@ -331,6 +331,6 @@
             }
         })
     })
-    </script>
+    </script> -->
 
 {% endblock %}
