--- a/templates/RiskAndFairness_oTree/Probability.html
+++ b/templates/RiskAndFairness_oTree/Probability.html
@@ -7,18 +7,11 @@
     </h2>
 
     <p>
-        In this task, you are given two fixed, mutually exclusive outcomes.
-        You are then asked to decide the probabilities of these two outcomes.
-        See graph below.
+        In this task, you are given two fixed, mutually exclusive outcomes.You are then asked to decide the probabilities of these two outcomes.See graph below.
     </p>
 
     <p>
-        In the left-side graph, your tokens are represented on the horizontal axis and your
-        partner’s tokens on the vertical axis. Each of the two possible outcomes is represented
-        by a dot or a bubble in this graph. You must decide what the probability of each outcome is
-        in percentage (%) terms. The figure below shows a sample screenshot
-        of this task where the two fixed outcomes are
-        A = (You: 70, Partner: 10) and B = (You: 10, Partner: 80).
+        In the left-side graph, your tokens are represented on the horizontal axis and yourpartner’s tokens on the vertical axis. Each of the two possible outcomes is representedby a dot or a bubble in this graph. You must decide what the probability of each outcome isin percentage (%) terms. The figure below shows a sample screen-shotof this task where the two fixed outcomes areA = (You: 70, Partner: 10) and B = (You: 10, Partner: 80).
     </p> </br>
 
     <p>
@@ -29,26 +22,15 @@
     </p> </br>
 
     <p>
-        On the right side of the screen you have a slider tool where you can chose the chance of Outcome A,
-        from 0% to 100%. Drag the slider onto your chosen percentage.
-        For example: If you choose 40, outcome A will occur with a 40% chance and outcome B with a 60% chance.
-        If you choose 100, outcome A will occur for sure. If you choose 0, outcome B will occur for sure.
+        On the right side of the screen you have a slider tool where you can chose the chance of Outcome A,from 0% to 100%. Drag the slider onto your chosen percentage.For example: If you choose 40, outcome A will occur with a 40% chance and outcome B with a 60% chance.If you choose 100, outcome A will occur for sure. If you choose 0, outcome B will occur for sure.
     </p>
 
     <p>
-        In the graph, the size of each outcome bubble will increase with the chances it is given.
-        You can try as many combinations as you want before you submit your decision.
-        The same information of the graph is displayed in the table below the slider bar.
-        Throughout this session, <b style="color: blue"> your tokens will be represented in blue </b> and
-        your <b style="color: orange"> partner's tokens in orange</b>.
+        In the graph, the size of each outcome bubble will increase with the chances it is given.You can try as many combinations as you want before you submit your decision.The same information of the graph is displayed in the table below the slider bar.Throughout this session, <b style="color: blue"> your tokens will be represented in blue </b> andyour <b style="color: orange"> partner's tokens in orange</b>.
     </p>
 
     <p>
-        Once you make your choice, press the submit decision button and continue to the next round.
-        If you do not make a choice (do not move the slider to your preferred position, the computer will return an error.
-        Please think through your decisions carefully. If, at the end of the session, this Decision Round is selected to be paid,
-        the computer will randomly choose outcome A or B according with the probabilities you decided
-        and will pay you and your partner accordingly.
+        Once you make your choice, press the submit decision button and continue to the next round.If you do not make a choice (do not move the slider to your preferred position, the computer will return an error.Please think through your decisions carefully. If, at the end of the session, this Decision Round is selected to be paid,the computer will randomly choose outcome A or B according with the probabilities you decidedand will pay you and your partner accordingly.
     </p>
 
 </div>
