--- a/templates/RiskAndFairness_oTree/Probability.html
+++ b/templates/RiskAndFairness_oTree/Probability.html
@@ -3,7 +3,7 @@
 <div class="instructions well well-lg">
 
     <h2 class="panel-sub-heading">
-        Instructions - Task PR
+        Instructions - Task 1
     </h2>
 
     <p>
