--- a/templates/RiskAndFairness_oTree/det_giv.html
+++ b/templates/RiskAndFairness_oTree/det_giv.html
@@ -3,7 +3,7 @@
 <div class="instructions well well-lg">
 
     <h2 class="panel-sub-heading">
-        Instructions - Task DG
+        Instructions - Task 8
     </h2>
 
     <p>
