--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -7,19 +7,19 @@
 
         <h2 class="panel-sub-heading">
             {% if mode == 'sec_1bl_1ch'%}
-                Instructions - Task S-1B-1C
+                Instructions - Task 2
             {% elif mode == 'sec_1bl_2ch'%}
-                Instructions - Task S-1B-2C
+                Instructions - Task 4
             {% elif mode == 'sec_2bl_1ch'%}
-                Instructions - Task S-2B-1C
+                Instructions - Task 3
             {% elif mode == 'sec_2bl_2ch'%}
-                Instructions - Task S-2B-2C
+                Instructions - Task 9
             {% elif mode == 'sec_ownrisk' %}
-                Instructions - Task S-OwnRisk
+                Instructions - Task 5
             {% elif mode == 'sec_ownrisk_fixedother' %}
-                Instrucitons - Task S-OwnRisk-FixedOther
+                Instrucitons - Task 6
             {% elif mode == 'sec_otherrisk_ownfixed' %}
-                Instructions - Task S-OtherRisk-OwnFixed
+                Instructions - Task 7
             {% endif %}
         </h2>
 
