trial period header changes

--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -3,9 +3,9 @@
 
 {% block title %}
     {% if mode == 'probability' %}
-        <h1 style="color:#BFBFBF">Task 1 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 1</h1>
     {% elif mode == 'sec_1bl_1ch' %}
-        <h1 style="color:#BFBFBF">Task 2 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 2</h1>
     {% elif mode == 'sec_2bl_1ch' %}
         <h1 style="color:#BFBFBF">Task 3 - Decision {{ counter }}</h1>
     {% elif mode == 'sec_1bl_2ch' %}
