--- a/templates/RiskAndFairness_oTree/det_giv.html
+++ b/templates/RiskAndFairness_oTree/det_giv.html
@@ -26,7 +26,7 @@
         Please press on the Next button to proceed.
     </p>
 
-    <img src="{% static "det_giv.png" %}" width="500" align="center"/>
+    <!--img src="{% static "det_giv.png" %}" width="500" align="center"/-->
 
 </div>
 
