--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -99,7 +99,7 @@
         
     {% endif %}
 
-
+{% comment %}
 {# IMAGES #}
             {% if mode == 'sec_1bl_1ch' %}
                 <img src="{% static "sec_1bl_1ch_1.png" %}" width="500" align="center"/>
@@ -114,4 +114,4 @@
             {% elif mode == 'sec_otherrisk_ownfixed' %}
                 <img src="{% static "sec_otherrisk_ownfixed.png" %}" width="500" align="center"/>
             {% endif %}
-
+{% endcomment %}
