--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -7,17 +7,17 @@
     {% elif mode == 'sec_1bl_1ch' %}
         <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 2</h1>
     {% elif mode == 'sec_2bl_1ch' %}
-        <h1 style="color:#BFBFBF">Task 3 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 3</h1>
     {% elif mode == 'sec_1bl_2ch' %}
-        <h1 style="color:#BFBFBF">Task 4 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 4</h1>
     {% elif mode == 'sec_ownrisk' %}
-        <h1 style="color:#BFBFBF">Task 5 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 5</h1>
     {% elif mode == 'sec_ownrisk_fixedother' %}
-        <h1 style="color:#BFBFBF">Task 6 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 6</h1>
     {% elif mode == 'sec_otherrisk_ownfixed' %}
-        <h1 style="color:#BFBFBF">Task 7 - Decision {{ counter }}</h1>
+        <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 7</h1>
     {% elif mode == 'det_giv' %}
-         <h1 style="color:#BFBFBF">Task 8 - Decision {{ counter }}</h1>
+         <h1 style="color:#BFBFBF">Practice Round (not for money) - Task 8</h1>
     {% endif %}
 {% endblock %}
 
@@ -70,7 +70,8 @@
         'det_giv': 'single_given'
     }
 
-    var somethingChanged = false;
+    //unnecessary but I want to leave as much of trial_period.js unchanged from graph.js as possible
+    var somethingChanged = false
 
     var currentRound = {{ player.round_number | json }}
     var constantValues = {{ Constants.static_values | json }}
@@ -217,6 +218,18 @@
 
     <script src="{% static "js/trial_period.js" %}"></script>
 
+    <script>
+
+        function test_outcome()
+        {
+            //make it pick a random value, assign payoffs, then set the inner html of 
+            // outcome, you_payoff, partner_payoff
+
+            document.getElementById('results').style.display='block'
+            return false
+        }
+    </script>
+
 {% endblock %}
 
 
@@ -256,8 +269,8 @@
     <div id="app">
         <div class="container">
             <div class="row">
-                <div class="graph col-md-6"></div>
-                <div class="col-md-6" v-if="mode === 'probability'">
+                <div class="graph col-md-7"></div>
+                <div class="col-md-5" v-if="mode === 'probability'">
                     <h5>This is your choice:</h5>
                     <div class="row" style="margin-top: 50px">
                         <range-slider
@@ -268,20 +281,23 @@
                         v-model="prob.a">
                         </range-slider>
                     </div>
+
                     <div class="row">
-                        <div class="col-md-3" v-html="prob.a.toFixed(0) + '%'">
-                        </div>
-                        <div class="col-md-3" style="text-align: right;" v-html="prob.b.toFixed(0) + '%'">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             Probability of A:
                         </div>
-                        <div class="col-md-3" style="text-align: right;">
+                        <div class="col-md-4" >
                             Probability of B:
                         </div>
                     </div>
+
+                    <div class="row">
+                        <div class="col-md-4" v-html="prob.a.toFixed(0) + '%'">
+                        </div>
+                        <div class="col-md-4" v-html="prob.b.toFixed(0) + '%'">
+                        </div>
+                    </div>
+                    
                     <div class="row col-md-6" style="margin-top: 50px">
                         <table class="table table-bordered table-condensed small">
                             <thead>
@@ -331,7 +347,7 @@
                         <table class="table table-bordered table-condensed small">
                             <thead>
                                 <tr>
-                                    <td style = "text-align: left;"> State: Probability (%)</td>
+                                    <td style = "text-align: left;">State: Probability (%)</td>
                                     <td style = "text-align: center; color: blue">Your Tokens</td>
                                     <td style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Tokens</td>
                                 </tr>
@@ -351,38 +367,36 @@
                         </table>
                     </div>
                 </div>
-            </div>
-            <div class="row" v-if="mode !== 'probability'">
-                <input type="hidden" name="mode" v-model="mode" />
-                <input type="hidden" v-if="mode !== 'single'" name="partner_a" v-model="selected[1].x" />
-                <input type="hidden" v-if="mode !== 'single'" name="partner_b" v-model="selected[1].y" />
-                <input type="hidden" name="me_a" v-model="selected[0].x" />
-                <input type="hidden" name="me_b" v-model="selected[0].y" />
-                <input type="hidden" name="prob_a" v-model="prob.a" />
-                <input type="hidden" name="prob_b" v-model="prob.b" />
-            </div>
-            <div class="row" v-if="mode === 'probability'">
-                <input type="hidden" name="mode" v-model="mode" />
-                <input type="hidden" name="prob_a" v-model="prob.a" />
-                <input type="hidden" name="prob_b" v-model="prob.b" />
+                <div id="results" style="display: none" class="col-md-5">
+                    <h5>Test Outcome Results</h5>
+                    <div class="row col-md-6">
+                        <table class="table table-bordered table-condensed small">
+                            <thead>
+                                <tr>
+                                    <td style = "text-align: left;">Realized Outcome</td>
+                                    <td style = "text-align: center; color: blue">Your Payoff</td>
+                                    <td style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Payoff</td>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td id="outcome" style = "text-align: center;">N/A</td>
+                                    <td id="you_payoff" style = "text-align: center; color: blue">N/A</td>
+                                    <td id="partner_payoff" style = "text-align: center; color: orange" v-if="mode !== 'single'">N/A</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
 
     <div>
-        <button id="go" type="button" style="float: right;">Go</button>
+        <button id="go" type="button" onclick="test_outcome()">Test Outcome</button>
     </div>
 
-
-    <script type="text/javascript">
-    $(document).ready(function() {
-        $('go').click(function() {
-            
-            }
-        })
-    })
-    </script>
 
     {% comment %}
     {% next_button %}
