--- a/templates/RiskAndFairness_oTree/sec.html
+++ b/templates/RiskAndFairness_oTree/sec.html
@@ -17,7 +17,7 @@
             {% elif mode == 'sec_ownrisk' %}
                 Instructions - Task 5
             {% elif mode == 'sec_ownrisk_fixedother' %}
-                Instrucitons - Task 6
+                Instructions - Task 6
             {% elif mode == 'sec_otherrisk_ownfixed' %}
                 Instructions - Task 7
             {% endif %}
@@ -115,3 +115,5 @@
                 <img src="{% static "sec_otherrisk_ownfixed.png" %}" width="500" align="center"/>
             {% endif %}
 {% endcomment %}
+
+</div>
