fixed bug with sec_ownrisk mode

--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -220,7 +220,7 @@
         // outcome, you_payoff, partner_payoff
 
         var roundData = dynamicValues[currentRound - 1]
-        var mode = {{ mode | json }}
+        var mode = getMode()
         var rand = Math.random()
 
         if (mode === 'probability')
