change graph.html to task.html, merge trial periods with master

--- a/templates/RiskAndFairness_oTree/Task.html
+++ b/templates/RiskAndFairness_oTree/Task.html
@@ -277,9 +277,9 @@
                         <table class="table table-bordered table-condensed small">
                             <thead>
                                 <tr>
-                                    <td style = "text-align: left;">Outcome Probability (%)</td>
-                                    <td style = "text-align: center;" ><b style="color: blue">Your Tokens<b></td>
-                                    <td style = "text-align: center;" ><b style="color: orange">Partner's Tokens<b></td>
+                                    <td width="34%" style = "text-align: left;">Outcome Probability (%)</td>
+                                    <td width="33%" style = "text-align: center;" ><b style="color: blue">Your Tokens<b></td>
+                                    <td width="33%" style = "text-align: center;" ><b style="color: orange">Partner's Tokens<b></td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -322,9 +322,9 @@
                         <table class="table table-bordered table-condensed small">
                             <thead>
                                 <tr>
-                                    <td style = "text-align: left;"> State: Probability (%)</td>
-                                    <td style = "text-align: center; color: blue">Your Tokens</td>
-                                    <td style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Tokens</td>
+                                    <td width="34%" style = "text-align: left;"> State: Probability (%)</td>
+                                    <td width="33%" style = "text-align: center; color: blue">Your Tokens</td>
+                                    <td width="33%" style = "text-align: center; color: orange" v-if="mode !== 'single'">Partner's Tokens</td>
                                 </tr>
                             </thead>
                             <tbody>
