commit before deleting trial_period

--- a/templates/RiskAndFairness_oTree/trial_period.html
+++ b/templates/RiskAndFairness_oTree/trial_period.html
@@ -261,7 +261,7 @@
 
     </script>
 
-    <script src="{% static "js/trial_period.js" %}"></script>
+    <script src="{% static "js/graph.js" %}"></script>
 
 {% endblock %}
 
